--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,567 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+  >
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="favicon"
+      href="./images/favicon.png"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body" id="page-top">
+    <header class="header">
+      <div class="header__top">
+        <div class="icon">
+          <a
+          href="#menu"
+          class="icon__menu">
+          </a>
+
+          <div class="na-mu">
+            <a
+            href="#"
+            class="icon__logo">
+              <img
+              class="logo"
+              src="./images/icons/na_mu_icon.svg"
+              alt="Museum">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="top__content">
+        <h1 class="top__title">художній музей</h1>
+      </div>
+
+      <div class="button">
+        <a
+          href="#events"
+          class="text-decoration">
+          <div class="button__top">
+            <button class="button__text">КВИТКИ</button>
+            <button class="button__arrow"></button>
+          </div>
+        </a>
+      </div>
+
+      <div class="header__line">
+        <a
+          href="#"
+          target="_blank"
+          class="link-line text-decoration"
+        >
+          <div class="line-description">
+            <p class="line-text">події</p>
+            <div class="line-decoration"></div>
+          </div>
+        </a>
+      </div>
+    </header>
+
+    <div class="page__background">
+      <aside
+        class="menu page__menu"
+        id="menu">
+        <div class="menu__container">
+          <div class="menu__space">
+            <div class="menu__top">
+              <a
+                class="icon__close"
+                href="#">
+              </a>
+            </div>
+
+            <div class="menu__nav nav">
+              <div class="nav__part">
+                <nav class="nav__top">
+                  <ul class="nav__ul">
+                    <li class="nav__li">
+                      <a
+                      class="nav__text text-decoration"
+                      href="#gallery">
+                      Галерея
+                      </a>
+                    </li>
+                    <li class="nav__li">
+                      <a
+                      class="nav__text text-decoration"
+                      href="#events">
+                      Виставки та події
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="nav__part">
+                <nav class="nav__top">
+                  <ul class="nav__ul">
+                    <li class="nav__li">
+                      <a
+                      class="nav__text text-decoration"
+                      href="#subscription">
+                      Про Нас
+                      </a>
+                    </li>
+                    <li class="nav__li">
+                      <a
+                      class="nav__text text-decoration"
+                      href="#contacts">
+                      Контакти
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__worktime worktime">
+            <div class="worktime__onepart">
+              <p class="worktime__title">
+                Графік роботи
+              </p>
+              <ul class="worktime__date">
+                <li class="worktime__time">
+                  <span class="time">
+                    12:00 — 20:00
+                  </span>
+                  середа
+                </li>
+                <li class="worktime__time">
+                  <span class="time">
+                    12:00 — 20:00
+                  </span>
+                  четвер
+                </li>
+                <li class="worktime__time">
+                  <span class="time">
+                    12:00 — 20:00
+                  </span>
+                  п’ятниця
+                </li>
+                <li class="worktime__time">
+                  <span class="time">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                </li>
+                <li class="worktime__time">
+                  <span class="time">
+                    11:00 — 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+            </div>
+
+            <div class="worktime__twopart">
+              <p class="worktime__description">
+                <span class="time">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+
+
+    <main class="main">
+      <div class="main__container">
+        <section
+          class="events"
+          id="events"
+          >
+          <h2 class="events__title section-title">Актуальні події</h2>
+
+          <div class="event__image">
+            <img
+                class="event__img"
+                src="./images/images_events/images_1.png"
+                alt="image1"
+                />
+          </div>
+
+          <div class="event__article">
+            <div class="event__date date">
+              <div class="date__name">ВИСТАВКА</div>
+              <div class="date__number">26.08-29.11.2019</div>
+            </div>
+
+            <div class="event__text text">
+              <h4 class="text__title">Йду і повертаюсь</h4>
+              <div class="text__redsquare"></div>
+            </div>
+            <p class="event__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+          <div class="event__image">
+            <img
+            class="event__img"
+            src="./images/images_events/images_2.png"
+            alt="image2"
+            />
+          </div>
+
+          <div class="event__article">
+            <div class="event__date date">
+              <div class="date__name">ВИСТАВКА</div>
+              <div class="date__number">26.08-29.11.2019</div>
+            </div>
+
+            <div class="event__text text">
+              <h4 class="text__title">І спогади і мрії</h4>
+              <div class="text__redsquare"></div>
+            </div>
+            <p class="event__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </section>
+
+        <section
+          class="romanticism"
+          id="romanticism"
+        >
+          <div class="backgr__img"></div>
+
+          <div class="romanticism__description description">
+            <div class="description__date date">
+              <p class="date__name">ЛЕКЦІЯ</p>
+              <p class="date__number">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="description__title">
+              Від класицизму до <br> романтизму
+            </h3>
+          </div>
+        </section>
+
+        <section
+          class="gallery"
+          id="gallery"
+          >
+          <h2 class="gallery__title section-title">Галерея</h2>
+
+          <div class="slide-container swiper slider grid">
+            <div class="slide-content">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    class="img-swiper"
+                    src="./images/galery/gallery_1.svg"
+                    alt="photo_girl"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="img-swiper"
+                    src="./images/galery/gallery_2.svg"
+                    alt="photo_geese"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="img-swiper"
+                    src="./images/galery/gallery_4.svg"
+                    alt="photo_sea"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="img-swiper"
+                    src="./images/galery/gallery_5.svg"
+                    alt="photo_winter"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-pagination pagination"></div>
+          </div>
+
+          <div class="desctop__gallery--img-1">
+            <div class="desctop__gallery-img">
+              <img
+                class="desctop-img"
+                src="./images/galery/gallery_1.svg"
+                alt="photo_girl"
+              />
+            </div>
+          </div>
+
+          <div class="desctop__gallery--img-2">
+            <div class="desctop__gallery-img">
+              <img
+                class="desctop-img"
+                src="./images/galery/gallery_5.svg"
+                alt="photo_winter"
+              />
+            </div>
+          </div>
+
+          <div class="desctop__gallery--img-3">
+            <div class="desctop__gallery-img">
+              <img
+                class="desctop-img"
+                src="./images/galery/gallery_3.svg"
+                alt="photo_girl2"
+              />
+            </div>
+          </div>
+
+          <div class="desctop__gallery--img-4">
+            <div class="desctop__gallery-img">
+              <img
+                class="desctop-img"
+                src="./images/galery/gallery_4.svg"
+                alt="photo_sea"
+              />
+            </div>
+          </div>
+        </section>
+
+        <section
+        class="subscription subscription-bgimg"
+        id="subscription">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+                action="http://localhost:3000/api"
+                onsubmit="this.reset();
+                return false;"
+                method="post"
+                autocomplete="off"
+                class="block__form"
+            >
+            <div class="form__location">
+              <input
+                  id="email"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  class="form__mail"
+                  required
+                />
+              <button class="form__button"></button>
+            </div>
+          </form>
+        </section>
+
+        <section
+          class="contacts"
+          id="contacts"
+        >
+          <div class="contacts__logo">
+            <div class="contacts__logo-namu">
+              <a
+              href="#">
+                <img
+                class="contacts__namu"
+                src="./images/contacts/namu_contacts.svg"
+                alt="Museum">
+              </a>
+            </div>
+
+            <div class="contacts__icons">
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                class="contacts__icon--facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                class="contacts__icon--instagram"
+              ></a>
+            </div>
+          </div>
+
+          <div class="contacts__worktime">
+            <p class="worktime-bottom__title">
+              Графік роботи
+            </p>
+            <nav class="worktime-bottom__nav">
+              <ul class="worktime-bottom__date">
+                <li class="worktime-bottom__time">
+                  <span class="bottom-time">
+                    12:00 — 20:00
+                  </span>
+                  середа
+                </li>
+                <li class="worktime-bottom__time">
+                  <span class="bottom-time">
+                    12:00 — 20:00
+                  </span>
+                  четвер
+                </li>
+                <li class="worktime-bottom__time">
+                  <span class="bottom-time">
+                    12:00 — 20:00
+                  </span>
+                  п’ятниця
+                </li>
+                <li class="worktime-bottom__time">
+                  <span class="bottom-time">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                </li>
+                <li class="worktime-bottom__time">
+                  <span class="bottom-time">
+                    11:00 — 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+            </nav>
+            <br>
+
+            <p class="worktime-bottom__description">
+              <span class="bottom-time">Вихідні:</span> понеділок, вівторок
+            </p>
+            <p class="worktime-bottom__description">
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="contacts__contact">
+            <p class="contact__title">Контакти:</p>
+
+            <a
+              href="https://www.bing.com/maps?mepi=23%7E%7ETopOfPage%7EMap_Image&ty=18&q=%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%2C+%D0%9A%D0%B8%D1%97%D0%B2%2C+01008&ppois=50.449357_30.5307561_%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%2C+%D0%9A%D0%B8%D1%97%D0%B2%2C+01008_%7E&cp=50.449361%7E30.530748&lvl=16.0&v=2&sV=1&FORM=MIRE"
+              class="contact__location text-decoration"
+              target="_blank">
+              <p class="contact__location--text">
+                вул. М. Грушевського, 6; Київ, 01001
+              </p>
+            </a>
+            <a
+              href="tel:+12345555-55-55"
+              class="contact__location text-decoration">
+              <p class="contact__location--text">
+                тел.+38 (044) 278-13-57
+              </p>
+            </a>
+            <a
+            href="tel:+12345555-55-55"
+            class="contact__location text-decoration">
+              <p class="contact__location--text">
+                факс +38 (044) 278-74-54
+              </p>
+            </a>
+            <a
+            href="mailto:hello@bang&olufsen.com"
+            class="contact__location text-decoration">
+              <p class="contact__location--text">
+                e-mail: info@namu.kiev.ua
+              </p>
+            </a>
+          </div>
+
+          <div class="contacts__line"></div>
+
+          <div class="contacts-nav__left">
+            <nav class="nav__bottom">
+              <ul class="nav__bottom-list">
+                <li class="nav__bottom-item">
+                  <a
+                    href="#gallery"
+                    class="nav__bottom-link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__bottom-item">
+                  <a
+                    href="#events"
+                    class="nav__bottom-link">
+                    Виставки та події
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="contacts-nav__right">
+            <nav class="nav__bottom">
+              <ul class="nav__bottom-list">
+                <li class="nav__bottom-item">
+                  <a
+                    href="#subscription"
+                    class="nav__bottom-link">
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__bottom-item">
+                  <a
+                    href="#contacts"
+                    class="nav__bottom-link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <a
+      href="#page-top"
+      class="go__top"
+    >
+    </a>
+
+    <footer class="footer">
+      <div class="footer__information">
+        <p class="footer__information-about-page">Designed by Zhyriada Marina</p>
+        <p class="footer__information-about-page">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
