--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
       <div class="header__bg-field">
         <a
           href="#"
-          target="_blank"
           class="header__logo"
         >
           Na
@@ -67,7 +66,6 @@
             <li class="menu__sections-list--item">
               <a
                 href="#gallery"
-                target="_blank"
                 class="menu__sections-list-link"
               >
                 Галерея
@@ -77,7 +75,6 @@
             <li class="menu__sections-list--item">
               <a
                 href="#subscription"
-                target="_blank"
                 class="menu__sections-list-link"
               >
                 Про Нас
@@ -87,7 +84,6 @@
             <li class="menu__sections-list--item">
               <a
                 href="#events"
-                target="_blank"
                 class="menu__sections-list-link"
               >
                 Виставки та події
@@ -97,7 +93,6 @@
             <li class="menu__sections-list--item">
               <a
                 href="#contacts"
-                target="_blank"
                 class="menu__sections-list-link"
               >
                 Контакти
@@ -340,11 +335,13 @@
     <footer class="footer">
       <div class="footer__info-field">
         <div class="footer__first-section">
-          <img
-            class="footer__logo"
-            src="./images/icons/NA MU.png"
-            alt="logo"
-          />
+          <a href="#">
+            <img
+              class="footer__logo"
+              src="./images/icons/NA MU.png"
+              alt="logo"
+            />
+          </a>
 
           <ul class="footer__social-list">
             <li
@@ -415,6 +412,7 @@
 
               <li class="footer__contact-list-info--item">
                 <a
+                  target="_blank"
                   class="footer__contact-list-info--link"
                   href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce52445a8315:0x5e30ef474eddac89?sa=X&ved=1t:242&ictx=111"
                 >
@@ -460,39 +458,19 @@
 
           <ul class="footer__anchor-link-list">
             <li class="footer__anchor-link-list--item">
-              <a
-                href="#gallery"
-                target="_blank"
-              >
-                Галерея
-              </a>
+              <a href="#gallery">Галерея</a>
             </li>
 
             <li class="footer__anchor-link-list--item">
-              <a
-                href="#subscription"
-                target="_blank"
-              >
-                Про Нас
-              </a>
+              <a href="#subscription">Про Нас</a>
             </li>
 
             <li class="footer__anchor-link-list--item">
-              <a
-                href="#events"
-                target="_blank"
-              >
-                Виставки та події
-              </a>
+              <a href="#events">Виставки та події</a>
             </li>
 
             <li class="footer__anchor-link-list--item">
-              <a
-                href="#contacts"
-                target="_blank"
-              >
-                Контакти
-              </a>
+              <a href="#contacts">Контакти</a>
             </li>
           </ul>
         </div>
