--- a/src/index.html
+++ b/src/index.html
@@ -14,74 +14,100 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-nav">
-          <a
-            href="#menu"
-            class="icon icon--menu"
-          ></a>
-          <a href="#">
-            <img
-              class="header-logo"
-              src="./images/icons/NA_MU.svg"
-              alt="Museum Logo"
-            />
-          </a>
-        </div>
+      <div class="header-museum">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+        <h1 class="header-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a
+          href="#"
+          class="header-museum__ticket"
+        >
+          КВИТКИ
+        </a>
+        <span class="header-museum__events">ПОДІЇ</span>
       </div>
+      <div class="header-namu">
+        <a
+          href="#menu"
+          class="icon icon--menu_namu"
+        ></a>
+        <a
+          href="#"
+          class="icon icon--namu"
+        ></a>
+      </div>
+    </header>
 
-      <aside
-        class="menu"
-        id="menu"
-      >
-        <div class="container">
-          <div class="menu-bar">
-            <nav class="menu-nav">
-              <div>
-                <a
-                  href="menu"
-                  class="icon icon--close"
-                ></a>
-              </div>
-              <div class="flex">
-                <a
-                  href="#"
-                  class="menu-nav__item menu-nav__gallery"
-                >
-                  Галерея
-                </a>
-                <a
-                  href="#"
-                  class="menu-nav__item"
-                >
-                  Виставки та події
-                </a>
-              </div>
-              <div class="flex">
-                <a
-                  href="#"
-                  class="menu-nav__item menu-nav__about"
-                >
-                  Про Нас
-                </a>
-                <a
-                  href="#"
-                  class="menu-nav__item"
-                >
-                  Контакти
-                </a>
-              </div>
-            </nav>
-          </div>
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="container menu-flex">
+        <div class="menu-bar">
+          <nav class="menu-nav">
+            <div>
+              <a
+                href="#"
+                class="icon icon--close"
+              ></a>
+            </div>
+            <div class="flex-aside">
+              <a
+                href="#"
+                class="menu-nav__item menu-nav__gallery"
+              >
+                Галерея
+              </a>
+              <a
+                href="#"
+                class="menu-nav__item"
+              >
+                Виставки та події
+              </a>
+            </div>
+            <div class="flex-aside">
+              <a
+                href="#"
+                class="menu-nav__item menu-nav__about"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#"
+                class="menu-nav__item"
+              >
+                Контакти
+              </a>
+            </div>
+          </nav>
+        </div>
 
-          <div class="schedule">
-            <p class="schedule-title">Графік роботи</p>
+        <div class="schedule">
+          <p class="schedule-title">Графік роботи</p>
+          <div class="schedule-flex">
             <ul class="schedule-list">
-              <li>12:00 — 20:00 середа</li>
-              <li>12:00 — 20:00 четвер</li>
-              <li>12:00 — 20:00 п’ятниця</li>
-              <li>11:00 — 19:00 субота</li>
-              <li>11:00 — 19:00 неділя</li>
+              <li>
+                <span class="bold">12:00 — 20:00</span>
+                середа
+              </li>
+              <li>
+                <span class="bold">12:00 — 20:00</span>
+                четвер
+              </li>
+              <li>
+                <span class="bold">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+              <li>
+                <span class="bold">11:00 — 19:00</span>
+                субота
+              </li>
+              <li>
+                <span class="bold">11:00 — 19:00</span>
+                неділя
+              </li>
             </ul>
 
             <p class="schedule-text">
@@ -90,11 +116,208 @@
             </p>
           </div>
         </div>
-      </aside>
-    </header>
+      </div>
+    </aside>
+    <aside></aside>
     <main>
-      <section class="museum"></section>
+      <section class="events">
+        <div class="container">
+          <h2 class="events-title">Актуальні події</h2>
+          <div class="events-container">
+            <img
+              src="./images/photos/Актуальні_події_1.png"
+              alt="painted river with trees"
+              class="events-img"
+            />
+            <div>
+              <p class="events-exhibition">
+                ВИСТАВКА
+                <span class="events-exhibition__date">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events-title__mini">
+                Йду і повертаюсь
+                <span class="events-title__square"></span>
+              </h3>
+              <p class="events-text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="events-container">
+            <img
+              src="./images/photos/Актуальні_події_2.png"
+              alt="painted ukraininan girl with bird"
+              class="events-img"
+            />
+            <div>
+              <p class="events-exhibition">
+                ВИСТАВКА
+                <span class="events-exhibition__date">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events-title__mini">
+                І спогади і мрії
+                <span class="events-title__square"></span>
+              </h3>
+              <p class="events-text">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="lection">
+        <div class="lection-bcg">
+          <div class="lection-container">
+            <p class="lection-text">
+              ЛЕКЦІЯ
+              <span>26/08/2019 - 11:00</span>
+            </p>
+            <h3 class="lection-title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <section class="gallery"><h2 class="gallery-title">Галерея</h2></section>
+      <section class="subcraption">
+        <h3 class="subcraption-title">Підписка</h3>
+        <p class="subcraption-text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form class="subcraption-input__box">
+          <input
+            type="text"
+            placeholder="E-mail"
+            class="subcraption-input"
+            required
+          />
+          <button
+            class="subcraption-input__but"
+            type="submit"
+          ></button>
+        </form>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container footer_bot">
+        <div class="footer-div1">
+          <a
+            href="#"
+            class="footer-namu"
+          ></a>
+          <div class="flex">
+            <a
+              href="#"
+              class="footer-face"
+            ></a>
+            <a
+              href="#"
+              class="footer-insta"
+            ></a>
+          </div>
+        </div>
+        <div class="flex">
+          <div class="footer-div2">
+            <p class="footer-schedule">Графік роботи</p>
+            <ul class="footer-list">
+              <li class="footer-list__item">
+                <span class="bold">12:00 — 20:00</span>
+                середа
+              </li>
+              <li class="footer-list__item">
+                <span class="bold">12:00 — 20:00</span>
+                четвер
+              </li>
+              <li class="footer-list__item">
+                <span class="bold">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+              <li class="footer-list__item">
+                <span class="bold">11:00 — 19:00</span>
+                субота
+              </li>
+              <li class="footer-list__item">
+                <span class="bold">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+            <p class="footer-weekend">
+              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </p>
+          </div>
+
+          <div class="footer-div3">
+            <p>Контакти:</p>
+            <ul class="footer-contacts">
+              <li><a href="#">вул. М. Грушевського, 6; Київ, 01001</a></li>
+              <li><a href="#">тел. +38 (044) 278-13-57</a></li>
+              <li><a href="#">факс +38 (044) 278-74-54</a></li>
+              <li><a href="#">e-mail: info@namu.kiev.ua</a></li>
+            </ul>
+          </div>
+          <div class="footer-div4">
+            <nav>
+              <div>
+                <a href="#">Галерея</a>
+                <a href="#">Виставки та події</a>
+              </div>
+
+              <div>
+                <a href="#">Про Нас</a>
+                <a href="#">Контакти</a>
+              </div>
+            </nav>
+          </div>
+          <a
+            href="#"
+            class="footer-up"
+          ></a>
+        </div>
+        <div>
+          <nav class="footer-nav">
+            <div class="footer-flex">
+              <a
+                href="#"
+                class="footer-link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#"
+                class="footer-link"
+              >
+                Виставки та події
+              </a>
+            </div>
+
+            <div class="footer-flex footer-flex2">
+              <a
+                href="#"
+                class="footer-link"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#"
+                class="footer-link"
+              >
+                Контакти
+              </a>
+            </div>
+          </nav>
+        </div>
+
+        <div class="footer-person">
+          <p class="footer-person__text">Created by Zhyla Valeriy</p>
+          <p class="footer-person__text">
+            Copyright © 2024. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
